First steps with shinydashboard. next: restructuring, renaming of input controls, bsTooltips to provide explanations, new tab structure, adding also preview of the data

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,22 @@ Type: Package
 Title: What the Package Does (Title Case)
 Version: 0.1
 Date: 2016-02-11
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
+Authors@R: person("Federico", "Marini", email = "marinif@uni-mainz.de",
+    role = c("aut", "cre"))
+Maintainer: Federico Marini <marinif@uni-mainz.de>
 Description: More about what it does (maybe more than one line)
 License: What license is it under?
 LazyData: TRUE
+Depends:
+    R (>= 3.2)
+Imports:
+    shiny (>= 0.9.1.9008),
+    shinydashboard,
+    shinyBS,
+    ggplot2,
+    DT,
+    methods
+Suggests:
+    knitr,
+    testthat
+VignetteBuilder: knitr
