added dependencies in the import of DESCRIPTION, should cover most. see if something can be removed e.g. plyr, grid, scales. will need to do a good job in specifying all the imports with importFrom. added roxygen skeletons to most functions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,10 +12,21 @@ LazyData: TRUE
 Depends:
     R (>= 3.2)
 Imports:
+	DESeq2,
+	genefilter,
+	pheatmap,
+	d3heatmap,
+	scales,
+	NMF,
+	plyr,
+	grid,
+	topGO,
+	GO.db,
     shiny (>= 0.9.1.9008),
     shinydashboard,
     shinyBS,
-    ggplot2,
+    ggplot2 (>= 2.0.0),
+    ggrepel,
     DT,
     methods
 Suggests:
