two things: getting setup for r cmd check, and most importantly allowing also dds alone as input. rlt gets computed, with msg. moreover, ui disappears when not needed, e.g. when dds is given - all stuff is provided

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,16 +12,16 @@ LazyData: TRUE
 Depends:
     R (>= 3.2)
 Imports:
-	DESeq2,
-	genefilter,
-	pheatmap,
-	d3heatmap,
-	scales,
-	NMF,
-	plyr,
-	grid,
-	topGO,
-	GO.db,
+    DESeq2,
+    genefilter,
+    pheatmap,
+    d3heatmap,
+    scales,
+    NMF,
+    plyr,
+    grid,
+    topGO,
+    GO.db,
     shiny (>= 0.9.1.9008),
     shinydashboard,
     shinyBS,
@@ -33,3 +33,4 @@ Suggests:
     knitr,
     testthat
 VignetteBuilder: knitr
+RoxygenNote: 5.0.1
