update: covr got running. needed to do the correct import in the namespace - will need to put them in the right places for each function, but still, found out why the tests were not passed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,24 @@ export(genepca)
 export(ggbiplotFede)
 export(hi_loadings)
 export(pca2go)
+export(pcaExplorer)
 export(pcaplot)
 export(pcascree)
 export(topGOtable)
+import(DESeq2)
+import(DT)
+import(GO.db)
+import(NMF)
+import(d3heatmap)
+import(genefilter)
+import(ggplot2)
+import(ggrepel)
+import(grid)
+import(methods)
+import(pheatmap)
+import(plyr)
+import(scales)
+import(shiny)
+import(shinyBS)
+import(shinydashboard)
+import(topGO)
