--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ import(DESeq2)
 import(DT)
 import(GO.db)
 import(NMF)
+import(SummarizedExperiment)
 import(d3heatmap)
 import(genefilter)
 import(ggplot2)
