--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,3 +35,6 @@ Suggests:
     testthat
 VignetteBuilder: knitr
 RoxygenNote: 5.0.1
+URL: https://github.com/federicomarini/pcaExplorer
+BugReports: https://github.com/federicomarini/pcaExplorer/issues
+biocViews: Software, Visualization, RNASeq, DimensionReduction, PrincipalComponent, QualityControl, GUI
