removed specific calls to library. probably still something to fix with imports?

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,6 @@ export(topGOtable)
 import(DESeq2)
 import(DT)
 import(GO.db)
-import(NMF)
 import(SummarizedExperiment)
 import(d3heatmap)
 import(genefilter)
@@ -21,10 +20,10 @@ import(ggplot2)
 import(ggrepel)
 import(grid)
 import(methods)
-import(pheatmap)
 import(plyr)
 import(scales)
 import(shiny)
 import(shinyBS)
 import(shinydashboard)
 import(topGO)
+importFrom(NMF,aheatmap)
