--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: pcaExplorer
 Type: Package
 Title: Interactive Visualization of RNA-seq Data Using a Principal Components Approach
-Version: 0.3.0
+Version: 0.4.0
 Date: 2016-02-23
 Authors@R: c(person("Federico", "Marini", email = "marinif@uni-mainz.de",
     role = c("aut", "cre")))
@@ -23,6 +23,8 @@ Imports:
     plyr,
     grid,
     topGO,
+    limma,
+    GOstats,
     GO.db,
     shiny (>= 0.12.0),
     shinydashboard,
