trying to sort out the issue with duplicate imports, as in the warnings---

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,14 +11,12 @@ export(pcascree)
 export(plotPCcorrs)
 export(topGOtable)
 import(DESeq2)
-import(DT)
 import(GO.db)
+import(GOstats)
 import(SummarizedExperiment)
 import(d3heatmap)
-import(genefilter)
 import(ggplot2)
 import(ggrepel)
-import(grid)
 import(methods)
 import(plyr)
 import(scales)
@@ -26,4 +24,8 @@ import(shiny)
 import(shinyBS)
 import(shinydashboard)
 import(topGO)
+importFrom(DT,datatable)
 importFrom(NMF,aheatmap)
+importFrom(genefilter,rowVars)
+importFrom(limma,goana)
+importFrom(limma,topGO)
