somehow trying to fix warning of replacing imports. now put shiny into depends?

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,7 +19,6 @@ import(ggplot2)
 import(ggrepel)
 import(methods)
 import(plyr)
-import(scales)
 import(shiny)
 import(shinyBS)
 import(shinydashboard)
@@ -29,3 +28,5 @@ importFrom(NMF,aheatmap)
 importFrom(genefilter,rowVars)
 importFrom(limma,goana)
 importFrom(limma,topGO)
+importFrom(scales,brewer_pal)
+importFrom(scales,hue_pal)
