--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,9 @@ Description: This package provides functionality for interactive visualization o
 License: GPL (>=2)
 LazyData: TRUE
 Depends:
-    R (>= 3.2)
+    R (>= 3.2),
+    shiny (>= 0.12.0),
+    ggplot2 (>= 2.0.0)
 Imports:
     DESeq2,
     SummarizedExperiment,
@@ -21,15 +23,12 @@ Imports:
     scales,
     NMF,
     plyr,
-    grid,
     topGO,
     limma,
     GOstats,
     GO.db,
-    shiny (>= 0.12.0),
     shinydashboard,
     shinyBS,
-    ggplot2 (>= 2.0.0),
     ggrepel,
     DT,
     methods
