removed depends, left as better targeted imports - bzw removed others which might be in conflict + added AnnotationDbi

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,13 @@ export(correlatePCs)
 export(genepca)
 export(ggbiplotFede)
 export(hi_loadings)
+export(limmaquickpca2go)
 export(pca2go)
 export(pcaExplorer)
 export(pcaplot)
 export(pcascree)
 export(plotPCcorrs)
+export(quickpca2go)
 export(topGOtable)
 import(DESeq2)
 import(GO.db)
@@ -20,9 +22,9 @@ import(ggrepel)
 import(methods)
 import(plyr)
 import(shiny)
-import(shinyBS)
 import(shinydashboard)
 import(topGO)
+importFrom(AnnotationDbi,select)
 importFrom(DT,datatable)
 importFrom(NMF,aheatmap)
 importFrom(genefilter,rowVars)
@@ -30,3 +32,4 @@ importFrom(limma,goana)
 importFrom(limma,topGO)
 importFrom(scales,brewer_pal)
 importFrom(scales,hue_pal)
+importFrom(shinyBS,bsTooltip)
