--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,13 +12,12 @@ Description: This package provides functionality for interactive visualization o
 License: GPL (>=2)
 LazyData: TRUE
 Depends:
-    R (>= 3.2),
-    shiny (>= 0.12.0),
-    ggplot2 (>= 2.0.0)
+    R (>= 3.2)
 Imports:
     DESeq2,
     SummarizedExperiment,
     genefilter,
+    ggplot2 (>= 2.0.0),
     d3heatmap,
     scales,
     NMF,
@@ -27,6 +26,8 @@ Imports:
     limma,
     GOstats,
     GO.db,
+    AnnotationDbi,
+    shiny (>= 0.12.0),
     shinydashboard,
     shinyBS,
     ggrepel,
