one more step for kicking out the warnings in the imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,6 @@ export(quickpca2go)
 export(topGOtable)
 import(DESeq2)
 import(GO.db)
-import(GOstats)
 import(SummarizedExperiment)
 import(d3heatmap)
 import(ggplot2)
@@ -33,3 +32,5 @@ importFrom(limma,topGO)
 importFrom(scales,brewer_pal)
 importFrom(scales,hue_pal)
 importFrom(shinyBS,bsTooltip)
+importMethodsFrom(GOstats,hyperGTest)
+importMethodsFrom(GOstats,summary)
