added some more precise imports, plus replaced aes calls to aes_string, to avoid 'no visible global function definition' NOTEs

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,9 @@ Depends:
 Imports:
     DESeq2,
     SummarizedExperiment,
+    GenomicRanges,
+    IRanges,
+    S4Vectors,
     genefilter,
     ggplot2 (>= 2.0.0),
     d3heatmap,
