--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ import(shiny)
 import(shinydashboard)
 import(topGO)
 importFrom(AnnotationDbi,Term)
+importFrom(AnnotationDbi,mapIds)
 importFrom(AnnotationDbi,select)
 importFrom(DT,datatable)
 importFrom(GenomicRanges,GRanges)
