--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: pcaExplorer
 Type: Package
 Title: Interactive Visualization of RNA-seq Data Using a Principal Components Approach
-Version: 0.7.0
-Date: 2016-03-10
+Version: 0.7.2
+Date: 2016-03-11
 Authors@R: c(person("Federico", "Marini", email = "marinif@uni-mainz.de",
     role = c("aut", "cre")))
 Maintainer: Federico Marini <marinif@uni-mainz.de>
 Description: This package provides functionality for interactive visualization of RNA-seq datasets
 	based on Principal Components Analysis. The methods provided allow for quick information 
 	extraction and effective data exploration. A Shiny application encapsulates the whole analysis. 
-License: GPL (>=2)
+License: MIT + file LICENSE
 LazyData: TRUE
 Depends:
     R (>= 3.2)
