--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,8 @@ language: r
 sudo: false
 cache: packages
 bioc_required: true
+
+r_github_packages:
+  - jimhester/covr
+after_success:
+  - Rscript -e 'library(covr);codecov()'
