--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,9 @@ importFrom(IRanges,IRanges)
 importFrom(NMF,aheatmap)
 importFrom(S4Vectors,DataFrame)
 importFrom(genefilter,rowVars)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,pdf)
+importFrom(grDevices,rainbow)
 importFrom(limma,goana)
 importFrom(limma,topGO)
 importFrom(scales,brewer_pal)
