--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,6 @@
 Package: pcaExplorer
 Type: Package
-Title: Interactive Visualization of RNA-seq Data Using a Principal
-        Components Approach
+Title: Interactive Visualization of RNA-seq Data Using a Principal Components Approach
 Version: 1.1.0
 Date: 2016-03-29
 Authors@R: c(person("Federico", "Marini", email =
