--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,8 +16,8 @@ LazyData: TRUE
 Imports: DESeq2, SummarizedExperiment, GenomicRanges, IRanges,
         S4Vectors, genefilter, ggplot2 (>= 2.0.0), d3heatmap, scales,
         NMF, plyr, topGO, limma, GOstats, GO.db, AnnotationDbi, shiny
-        (>= 0.12.0), shinydashboard, shinyBS, ggrepel, DT, grDevices,
-        methods
+        (>= 0.12.0), shinydashboard, shinyBS, ggrepel, DT, shinyAce,
+        threejs, lubridate, stringr, biomaRt, grDevices, methods
 Suggests: knitr, testthat, BiocStyle, rmarkdown, airway, org.Hs.eg.db
 URL: https://github.com/federicomarini/pcaExplorer
 BugReports: https://github.com/federicomarini/pcaExplorer/issues
