--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,8 +17,9 @@ Imports: DESeq2, SummarizedExperiment, GenomicRanges, IRanges,
         S4Vectors, genefilter, ggplot2 (>= 2.0.0), d3heatmap, scales,
         NMF, plyr, topGO, limma, GOstats, GO.db, AnnotationDbi, shiny
         (>= 0.12.0), shinydashboard, shinyBS, ggrepel, DT, shinyAce,
-        threejs, lubridate, stringr, biomaRt, grDevices, methods
-Suggests: knitr, testthat, BiocStyle, rmarkdown, airway, org.Hs.eg.db
+        threejs, lubridate, stringr, biomaRt, pheatmap, knitr, rmarkdown,
+        tidyr, grDevices, methods
+Suggests: testthat, BiocStyle, airway, org.Hs.eg.db
 URL: https://github.com/federicomarini/pcaExplorer
 BugReports: https://github.com/federicomarini/pcaExplorer/issues
 biocViews: Visualization, RNASeq, DimensionReduction,
