--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,8 +17,8 @@ Imports: DESeq2, SummarizedExperiment, GenomicRanges, IRanges,
         S4Vectors, genefilter, ggplot2 (>= 2.0.0), d3heatmap, scales,
         NMF, plyr, topGO, limma, GOstats, GO.db, AnnotationDbi, shiny
         (>= 0.12.0), shinydashboard, shinyBS, ggrepel, DT, shinyAce,
-        threejs, lubridate, biomaRt, pheatmap, knitr, rmarkdown,
-        tidyr, grDevices, methods
+        threejs, biomaRt, pheatmap, knitr, rmarkdown, tidyr, grDevices,
+        methods
 Suggests: testthat, BiocStyle, airway, org.Hs.eg.db
 URL: https://github.com/federicomarini/pcaExplorer
 BugReports: https://github.com/federicomarini/pcaExplorer/issues
