--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,7 @@ Suggests: testthat, BiocStyle, airway, org.Hs.eg.db
 URL: https://github.com/federicomarini/pcaExplorer
 BugReports: https://github.com/federicomarini/pcaExplorer/issues
 biocViews: Visualization, RNASeq, DimensionReduction,
-        PrincipalComponent, QualityControl, GUI
+        PrincipalComponent, QualityControl, GUI, ReportWriting
 VignetteBuilder: knitr
 RoxygenNote: 5.0.1
 NeedsCompilation: no
