--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: pcaExplorer
 Type: Package
 Title: Interactive Visualization of RNA-seq Data Using a Principal Components Approach
-Version: 1.1.2
-Date: 2016-03-29
+Version: 1.1.6
+Date: 2016-09-22
 Authors@R: c(person("Federico", "Marini", email =
         "marinif@uni-mainz.de", role = c("aut", "cre")))
 Maintainer: Federico Marini <marinif@uni-mainz.de>
@@ -16,13 +16,14 @@ LazyData: TRUE
 Imports: DESeq2, SummarizedExperiment, GenomicRanges, IRanges,
         S4Vectors, genefilter, ggplot2 (>= 2.0.0), d3heatmap, scales,
         NMF, plyr, topGO, limma, GOstats, GO.db, AnnotationDbi, shiny
-        (>= 0.12.0), shinydashboard, shinyBS, ggrepel, DT, grDevices,
+        (>= 0.12.0), shinydashboard, shinyBS, ggrepel, DT, shinyAce,
+        threejs, biomaRt, pheatmap, knitr, rmarkdown, tidyr, grDevices,
         methods
-Suggests: knitr, testthat, BiocStyle, rmarkdown, airway, org.Hs.eg.db
+Suggests: testthat, BiocStyle, airway, org.Hs.eg.db
 URL: https://github.com/federicomarini/pcaExplorer
 BugReports: https://github.com/federicomarini/pcaExplorer/issues
 biocViews: Visualization, RNASeq, DimensionReduction,
-        PrincipalComponent, QualityControl, GUI
+        PrincipalComponent, QualityControl, GUI, ReportWriting
 VignetteBuilder: knitr
 RoxygenNote: 5.0.1
 NeedsCompilation: no
