--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,21 @@
+# R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
+
 language: r
 r: bioc-devel
+
 sudo: false
 cache: packages
-bioc_required: true
 
-r_github_packages:
-  - jimhester/covr
+warnings_are_errors: false
+
+r_build_args: "--no-manual --no-resave-data"
+r_check_args: "--no-build-vignettes --no-manual --timings"
+
+bioc_packages:
+  - BiocInstaller
+
+r_packages:
+  - covr
+
 after_success:
-  - Rscript -e 'library(covr);codecov()'
+  - Rscript -e 'library(covr); codecov()'
