--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,7 +25,7 @@ environment:
 
 build_script:
   - travis-tool.sh install_bioc_deps
-  - travis-tool.sh install_bioc GenomeInfoDbData airway GO.db org.Hs.eg.db
+  - travis-tool.sh install_bioc DelayedArray GenomeInfoDbData airway GO.db org.Hs.eg.db
 
 
 test_script:
