--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,17 +13,18 @@ install:
 # Adapt as necessary starting from here
 
 environment:
-
+  global:
+    USE_RTOOLS: true
   matrix:
   - R_VERSION: release
     #R_ARCH: x64
     #_R_CHECK_FORCE_SUGGESTS_: false
     #GCC_PATH: mingw_64
-  - R_VERSION: devel
-    R_ARCH: x64
+  #- R_VERSION: devel
+    #R_ARCH: x64
     #_R_CHECK_FORCE_SUGGESTS_: false
-    GCC_PATH: mingw_64
-  USE_RTOOLS: true
+    #GCC_PATH: mingw_64
+ 
 
 
 build_script:
