--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,8 @@ r_packages:
 
 after_success:
   - Rscript -e 'library(covr); codecov()'
+
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y libpng-dev  
+
