--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,5 +26,6 @@ biocViews: Visualization, RNASeq, DimensionReduction,
         PrincipalComponent, QualityControl, GUI, ReportWriting
 VignetteBuilder: knitr
 RoxygenNote: 6.1.0
+Encoding: UTF-8
 NeedsCompilation: no
 Author: Federico Marini [aut, cre]
