fixed docu, removed double newlines, again

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ importFrom(limma,topGO)
 importFrom(pheatmap,pheatmap)
 importFrom(scales,brewer_pal)
 importFrom(scales,hue_pal)
+importFrom(shiny,addResourcePath)
 importFrom(shinyBS,bsTooltip)
 importFrom(tidyr,gather)
 importMethodsFrom(GOstats,hyperGTest)
