--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,8 @@ Imports: DESeq2, SummarizedExperiment, GenomicRanges, IRanges,
         threejs, biomaRt, pheatmap, knitr, rmarkdown, tidyr, grDevices,
         methods
 Suggests: testthat, BiocStyle, airway, org.Hs.eg.db
-URL: https://github.com/federicomarini/pcaExplorer
+URL: https://github.com/federicomarini/pcaExplorer,
+        http://federicomarini.github.io/pcaExplorer/
 BugReports: https://github.com/federicomarini/pcaExplorer/issues
 biocViews: Visualization, RNASeq, DimensionReduction,
         PrincipalComponent, QualityControl, GUI, ReportWriting
