--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,9 @@ after_success:
   - Rscript -e 'library(covr); codecov()'
 
 before_install:
+  - mkdir -p ~/.R
+  - echo -e 'MAKEFLAGS = -j2' > ~/.R/Makevars
+  - echo 'options(Ncpus = 2)' > ~/.Rprofile
   - sudo apt-get -qq update
   - sudo apt-get install -y libpng-dev  
 
