additional import for linking directly imgs in the modal dialogs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ importFrom(GenomicRanges,GRanges)
 importFrom(IRanges,IRanges)
 importFrom(NMF,aheatmap)
 importFrom(S4Vectors,DataFrame)
+importFrom(base64enc,dataURI)
 importFrom(genefilter,rowVars)
 importFrom(grDevices,colorRamp)
 importFrom(grDevices,dev.off)
