--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,8 +18,8 @@ Imports: DESeq2, SummarizedExperiment, GenomicRanges, IRanges,
         S4Vectors, genefilter, ggplot2 (>= 2.0.0), d3heatmap, scales,
         NMF, plyr, topGO, limma, GOstats, GO.db, AnnotationDbi, shiny
         (>= 0.12.0), shinydashboard, shinyBS, ggrepel, DT, shinyAce,
-        threejs, biomaRt, pheatmap, knitr, rmarkdown, tidyr, grDevices,
-        methods
+        threejs, biomaRt, pheatmap, knitr, rmarkdown, base64enc,
+        tidyr, grDevices, methods
 Suggests: testthat, BiocStyle, airway, org.Hs.eg.db
 URL: https://github.com/federicomarini/pcaExplorer,
         https://federicomarini.github.io/pcaExplorer/
