--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,7 @@ Imports: DESeq2, SummarizedExperiment, GenomicRanges, IRanges,
         (>= 0.12.0), shinydashboard, shinyBS, ggrepel, DT, shinyAce,
         threejs, biomaRt, pheatmap, knitr, rmarkdown, base64enc,
         tidyr, grDevices, methods
-Suggests: testthat, BiocStyle, airway, org.Hs.eg.db
+Suggests: testthat, BiocStyle, airway, org.Hs.eg.db, htmltools
 URL: https://github.com/federicomarini/pcaExplorer,
         https://federicomarini.github.io/pcaExplorer/
 BugReports: https://github.com/federicomarini/pcaExplorer/issues
