--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,30 +4,59 @@ Title: Interactive Visualization of RNA-seq Data Using a Principal Components Ap
 Version: 2.9.4
 Date: 2018-11-21
 Authors@R: c(person("Federico", "Marini", role = c("aut", "cre"), 
-        email ="marinif@uni-mainz.de", 
-        comment = c(ORCID = '0000-0003-3252-7758')))
+    email ="marinif@uni-mainz.de", 
+    comment = c(ORCID = '0000-0003-3252-7758')))
 Maintainer: Federico Marini <marinif@uni-mainz.de>
-Description: This package provides functionality for interactive
-        visualization of RNA-seq datasets based on Principal Components
-        Analysis. The methods provided allow for quick information
-        extraction and effective data exploration. A Shiny application
-        encapsulates the whole analysis.
+Description: This package provides functionality for interactive visualization 
+    of RNA-seq datasets based on Principal Components Analysis. The methods provided
+    allow for quick information extraction and effective data exploration. A Shiny
+    application encapsulates the whole analysis.
 License: MIT + file LICENSE
 LazyData: TRUE
-Imports: DESeq2, SummarizedExperiment, GenomicRanges, IRanges,
-        S4Vectors, genefilter, ggplot2 (>= 2.0.0), d3heatmap, scales,
-        NMF, plyr, topGO, limma, GOstats, GO.db, AnnotationDbi, shiny
-        (>= 0.12.0), shinydashboard, shinyBS, ggrepel, DT, shinyAce,
-        threejs, biomaRt, pheatmap, knitr, rmarkdown, base64enc,
-        tidyr, grDevices, methods
-Suggests: testthat, BiocStyle, airway, org.Hs.eg.db, htmltools
+Imports: 
+    DESeq2, 
+    SummarizedExperiment, 
+    GenomicRanges, 
+    IRanges,
+    S4Vectors, 
+    genefilter, 
+    ggplot2 (>= 2.0.0), 
+    d3heatmap, 
+    scales,
+    NMF, 
+    plyr, 
+    topGO, 
+    limma, 
+    GOstats, 
+    GO.db, 
+    AnnotationDbi, 
+    shiny (>= 0.12.0), 
+    shinydashboard, 
+    shinyBS, 
+    ggrepel, 
+    DT, 
+    shinyAce,
+    threejs, 
+    biomaRt, 
+    pheatmap, 
+    knitr, 
+    rmarkdown, 
+    base64enc,
+    tidyr, 
+    grDevices, 
+    methods
+Suggests: 
+    testthat, 
+    BiocStyle, 
+    airway, 
+    org.Hs.eg.db, 
+    htmltools
 URL: https://github.com/federicomarini/pcaExplorer,
-        https://federicomarini.github.io/pcaExplorer/
+    https://federicomarini.github.io/pcaExplorer/
 BugReports: https://github.com/federicomarini/pcaExplorer/issues
 biocViews: ImmunoOncology, Visualization, RNASeq, DimensionReduction,
-        PrincipalComponent, QualityControl, GUI, ReportWriting
+    PrincipalComponent, QualityControl, GUI, ReportWriting
 VignetteBuilder: knitr
 RoxygenNote: 6.1.1
 Encoding: UTF-8
 NeedsCompilation: no
-Author: Federico Marini [aut, cre]
