--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -24,7 +24,7 @@ navbar:
       text: Reference
       href: reference/index.html
     intro:
-      text: Get started
+      text: User guide
       href: articles/pcaExplorer.html
     github:
       icon: fa-github fa-lg
