--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,7 @@
-pandoc: 1.19.2.1
-pkgdown: 1.1.0
+pandoc: 2.3.1
+pkgdown: 1.3.0
 pkgdown_sha: ~
 articles:
   pcaExplorer: pcaExplorer.html
+  upandrunning: upandrunning.html
 
