replace general import statement with more precise ones

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,7 +29,6 @@ import(methods)
 import(plyr)
 import(rmarkdown)
 import(shiny)
-import(shinyAce)
 import(shinydashboard)
 import(threejs)
 import(topGO)
@@ -54,6 +53,11 @@ importFrom(pheatmap,pheatmap)
 importFrom(scales,brewer_pal)
 importFrom(scales,hue_pal)
 importFrom(shiny,addResourcePath)
+importFrom(shinyAce,aceAutocomplete)
+importFrom(shinyAce,aceEditor)
+importFrom(shinyAce,getAceModes)
+importFrom(shinyAce,getAceThemes)
+importFrom(shinyAce,updateAceEditor)
 importFrom(shinyBS,bsTooltip)
 importFrom(tidyr,gather)
 importMethodsFrom(GOstats,hyperGTest)
