Adjusted a couple of other imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,7 +23,6 @@ import(SummarizedExperiment)
 import(biomaRt)
 import(d3heatmap)
 import(ggplot2)
-import(ggrepel)
 import(knitr)
 import(methods)
 import(plyr)
@@ -42,6 +41,7 @@ importFrom(NMF,aheatmap)
 importFrom(S4Vectors,DataFrame)
 importFrom(base64enc,dataURI)
 importFrom(genefilter,rowVars)
+importFrom(ggrepel,geom_label_repel)
 importFrom(grDevices,colorRamp)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
@@ -58,6 +58,8 @@ importFrom(shinyAce,aceEditor)
 importFrom(shinyAce,getAceModes)
 importFrom(shinyAce,getAceThemes)
 importFrom(shinyAce,updateAceEditor)
+importFrom(shinyBS,bsCollapse)
+importFrom(shinyBS,bsCollapsePanel)
 importFrom(shinyBS,bsTooltip)
 importFrom(tidyr,gather)
 importMethodsFrom(GOstats,hyperGTest)
