--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,8 @@ before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y libpng-dev  
 
+before_cache: Rscript -e 'remotes::install_cran("pkgdown")'
+  deploy:
+    provider: script
+    script: Rscript -e 'pkgdown::deploy_site_github()'
+    skip_cleanup: true
