--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ r_check_args: "--no-build-vignettes --no-manual --timings"
 r_packages:
   - covr
 
+r_binary_packages:
+  - magick
+
 after_success:
   - Rscript -e 'library(covr); codecov()'
 
