switching from d3heatmap to heatmaply

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,6 @@ import(DESeq2)
 import(GO.db)
 import(SummarizedExperiment)
 import(biomaRt)
-import(d3heatmap)
 import(ggplot2)
 import(knitr)
 import(methods)
@@ -47,9 +46,12 @@ importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
 importFrom(grDevices,rainbow)
 importFrom(grDevices,rgb)
+importFrom(heatmaply,heatmaply)
 importFrom(limma,goana)
 importFrom(limma,topGO)
 importFrom(pheatmap,pheatmap)
+importFrom(plotly,plotlyOutput)
+importFrom(plotly,renderPlotly)
 importFrom(scales,brewer_pal)
 importFrom(scales,hue_pal)
 importFrom(shiny,addResourcePath)
