--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,8 @@ Imports:
     S4Vectors, 
     genefilter, 
     ggplot2 (>= 2.0.0), 
-    d3heatmap, 
+    heatmaply,
+    plotly,
     scales,
     NMF, 
     plyr, 
