--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,8 @@
 pandoc: 2.3.1
-pkgdown: 1.3.0
+pkgdown: 1.5.1
 pkgdown_sha: ~
 articles:
   pcaExplorer: pcaExplorer.html
   upandrunning: upandrunning.html
+last_built: 2020-05-25T23:10Z
 
