--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -86,6 +86,7 @@ jobs:
         run: |
           brew install harfbuzz
           brew install fribidi
+          brew install --cask gfortran
 
       - name: Install dependencies
         run: |
